<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_anime"
    android:orientation="vertical"
    android:padding="@dimen/dp_15"
    android:gravity="center_horizontal">

    <!-- Main Anime Image -->
    <ImageView
        android:id="@+id/animeImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_marginTop="@dimen/dp_15"
        android:scaleType="fitXY"
        android:src="@drawable/img" />

    <TextView
        android:id="@+id/animeTitleTextView"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anime_title"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:gravity="center" />


    <!-- Rating and Tags -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10">

        <!-- Column 1 -->
        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/statusLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/statusValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/scoreLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/scoreValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/popularityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/popularityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/durationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/durationValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/studiosLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/studios_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/studiosValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/studios_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/airedFromLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airedFrom_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/airedFromValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airedFrom_value"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="DuplicateIds" />
            </LinearLayout>

        </LinearLayout>

        <!-- Column 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/dp_5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/membersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/members_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/membersValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/members_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/rankLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/rankValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/favoritesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/favoritesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/seasonLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/season_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/seasonValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/season_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/genresLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/genresValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/airedToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airedTo_label"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginEnd="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/airedToValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airedTo_value"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>


        </LinearLayout>
    </GridLayout>

    <!-- Description Section -->
    <TextView
        android:id="@+id/animeDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/description_text"
        android:textSize="@dimen/sp_14"
        android:maxLines="3"
        android:ellipsize="end" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_5">

        <TextView
            android:id="@+id/see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_down"
            android:layout_marginTop="@dimen/dp_2"/>
    </LinearLayout>
</LinearLayout>

