<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/navbar"
xmlns:app="http://schemas.android.com/apk/res-auto"
app:layout_constraintTop_toTopOf="parent"
android:layout_width="match_parent"
android:layout_height="?attr/actionBarSize"
android:background="@android:color/white"
android:elevation="@dimen/toolbar_elevation">

<ImageView
    android:id="@+id/back_button"
    android:layout_width="@dimen/back_button_size"
    android:layout_height="@dimen/back_button_size"
    android:src="@drawable/back_icon"
    android:scaleType="fitCenter"
    android:contentDescription="@string/back_button"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginStart="@dimen/toolbar_layout_margin_start" />

<TextView
    android:id="@+id/toolbar_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="@android:color/black"
    android:textSize="@dimen/toolbar_title_size"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<ImageView
    android:id="@+id/flag_icon"
    android:layout_width="@dimen/toolbar_icon_size"
    android:layout_height="@dimen/toolbar_icon_size"
    android:scaleType="fitCenter"
    android:src="@drawable/en_flag"
    android:contentDescription="@string/flag_icon"
    app:layout_constraintEnd_toStartOf="@id/heart_icon"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginEnd="@dimen/toolbar_layout_margin_end" />

<ImageView
    android:id="@+id/heart_icon"
    android:layout_width="@dimen/toolbar_icon_size"
    android:layout_height="@dimen/toolbar_icon_size"
    android:scaleType="fitCenter"
    android:src="@drawable/ic_empty_heart"
    android:contentDescription="@string/heart_icon"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginEnd="@dimen/toolbar_layout_margin_end" />

</androidx.constraintlayout.widget.ConstraintLayout>
