<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homeHeaderBar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_60"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_90"
        app:cardElevation="@dimen/dp_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/anime_poster"
            android:src="@drawable/logo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtTitlePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/title_color"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgFlag"
        android:layout_width="@dimen/dp_35"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_15"
        android:contentDescription="@string/flag"
        android:src="@drawable/en_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgSearch"
        android:layout_width="@dimen/dp_30"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_15"
        android:contentDescription="@string/search"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/line_color"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
