<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.home.HomeFragment">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/header_home" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:tabIndicatorColor="@color/primary"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="@dimen/dp_2"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/primary"
        app:tabTextAppearance="@style/CustomTabTextAppearance" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_16"
                android:text="@string/popular"
                android:textColor="@color/primary"
                android:textSize="@dimen/sp_20" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_11"
                android:paddingTop="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16" />

            <TextView
                android:id="@+id/txtNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:text="@string/New"
                android:textColor="@color/primary"
                android:textSize="@dimen/sp_20" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_11"
                android:paddingTop="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16" />

            <TextView
                android:id="@+id/txtRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:text="@string/top_rate"
                android:textColor="@color/primary"
                android:textSize="@dimen/sp_20" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_11"
                android:paddingTop="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16" />

            <TextView
                android:id="@+id/txtFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:text="@string/favorite"
                android:textColor="@color/primary"
                android:textSize="@dimen/sp_20" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_11"
                android:paddingTop="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
