<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_anime_selected"
    android:paddingStart="@dimen/dp_5"
    android:paddingTop="@dimen/dp_5"
    android:paddingEnd="@dimen/dp_5"
    android:paddingBottom="@dimen/dp_20">

    <androidx.cardview.widget.CardView
        android:id="@+id/posterWrapper"
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_320"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="@color/shadow_poster_color"
        app:cardCornerRadius="@dimen/dp_30"
        app:cardElevation="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/anime_title"
            android:scaleType="centerCrop"
            android:src="@drawable/img" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="@dimen/dp_160"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/title_color"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posterWrapper" />

    <TextView
        android:id="@+id/txtGenre"
        android:layout_width="@dimen/dp_160"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/anime_genre"
        android:textColor="@color/genre_color"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />


    <TextView
        android:id="@+id/txtScore"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/custom_corner_rating_tag"
        android:elevation="@dimen/dp_10"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="@id/posterWrapper"
        app:layout_constraintTop_toTopOf="@id/posterWrapper" />

    <ImageButton
        android:id="@+id/txtDelete"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/custom_corner"
        android:elevation="@dimen/dp_10"
        android:src="@drawable/ic_delete"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="@dimen/sp_20"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/posterWrapper" />
</androidx.constraintlayout.widget.ConstraintLayout>

